# qed-splatter

./: .gitignore  Dockerfile  README.md  RGB_hard_pruner.py  depth_hard_pruner.py  pyproject.toml
pruning_utils/: colmap.py  nerf.py  normalize.py  open_ply_pipeline.py  utils.py
qed_splatter/: config.py  create_init_pointcloud.py  dataparser.py  depth_hard_pruner.py  metrics.py  model.py  parser_config.py  pipeline.py  rgb_hard_pruner.py
qed_splatter/pruning/: __init__.py  base.py
qed_splatter/scripts/: README.md  mesh_comparison.py  mesh_fix.py  pointcloud_alignment.py
qed_splatter/strategies/: pixel_wise_probability.py
qed_splatter/utils/: laplacian_norm.py  prob_backprojection.py
soft_pruning_tweeks/: default.py
soft_pruning_tweeks/soft_prune_utils/: nerf.py  open_ply_pipeline.py
